# miranda

arduino/BNO055_example/: BNO055_example.ino
arduino/TMP102_Example1/: TMP102_Example1.ino
arduino/TMP102_Example2/: TMP102_Example2.ino
arduino/i2cScanner/: i2cScanner.ino
miranda_control/: CMakeLists.txt  package.xml
miranda_control/config/: control.yaml  empty.yaml  localization.yaml
miranda_control/launch/: control.launch
miranda_description/: CMakeLists.txt  package.xml
miranda_description/launch/: description.launch
miranda_description/urdf/: caster.urdf.xacro  empty.urdf  miranda.urdf.xacro  miranda.urdf.xacro.orig  sick_lms1xx_mount.urdf.xacro  wheel.urdf.xacro
miranda_gazebo/: CMakeLists.txt  package.xml
miranda_gazebo/launch/: miranda_empty_world.launch  spawn_miranda.launch
miranda_map/: CMakeLists.txt  package.xml
miranda_map/launch/: map.launch
miranda_map/maps/: Snowberry.yaml
