<?xml version="1.0"?>
<package format="2">
  <name>miranda_control</name>
  <version>0.1.1</version>
  <description>Wimble Robotics Miranda controller</description>

  <author email="mike@wimblerobotics.com">Michael Wimble</author>
  
  <maintainer email="mike@wimblerobotics.com">Michael Wimble</maintainer>

  <license>BSD</license>

  <url type="website">http://wimblerobotics.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <depend>miranda_description</depend>
  <depend>interactive_marker_twist_server</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joy</depend>
  <depend>robot_localization</depend>
  <depend>rostopic</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>teleop_twist_joy</depend>
  <depend>twist_mux</depend>

  <export>
  </export>
</package>
