<?xml version="1.0"?>
<package format="2">
  <name>miranda_description</name>
  <version>0.1.1</version>
  <description>Wimble Robotics miranda URDF description</description>

  <author email="mike@wimblerobotics.com">Michael Wimble</author>
  
  <maintainer email="mike@wimblerobotics.com">Michael Wimble</maintainer>

  <url type="website">http://wimblerobotics.com</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>lms1xx</depend>

  <export>
  </export>
</package>
